# RAGs

./: .gitignore
Plagiarism Detector - Semantic Similarity Analyzer/: README.md  app.py  main.py  pyproject.toml
Plagiarism Detector - Semantic Similarity Analyzer/utils/: visualization.py
chat-with-your-lecture/: main.py  pyproject.toml
enterprise_docs_chunking/: FLOW_DIAGRAM.md  INSTALL.md  PROJECT_SUMMARY.md  README.md  demo.py  requirements.txt  test_phase1.py  test_phase2.py  todo.md
enterprise_docs_chunking/src/: __init__.py  chunking_strategies.py  config.py  document_classifier.py  document_loaders.py  document_processor.py  embeddings.py  vector_store.py
fine_tuned_sales/: README.md  requirements.txt  test.txt
fine_tuned_sales/data/: sales_transcripts.csv
fine_tuned_sales/models/: clf_bert_contrastive.joblib  clf_sbert_base.joblib
fine_tuned_sales/models/bert_contrastive/: README.md  config.json
fine_tuned_sales/src/: baseline.py  contrastive_finetune_llama.py  eda.py  evaluate.py  main.py  streamlit_app.py
hr_onboarding_knowledge_assistant/: README.md  main.py  pyproject.toml  todo.md
hr_onboarding_knowledge_assistant/data/: 01_Employee_Handbook.txt  02_Benefits_Guide.txt  03_Leave_Policy.txt  04_Remote_Work_Policy.txt  05_Conduct_Ethics.txt  06_Health_Safety.txt  07_Performance_Review_Guide.txt
hr_onboarding_knowledge_assistant/engine/: embed_store.py  load_and_split.py  loaders.py
plagiarism_detector_semantic_similarity_analyzer/: app.py  test_cases.md
plagiarism_detector_semantic_similarity_analyzer/engine/: detection.py  embeddings.py  similarity.py
rag_basics/: README.md  rag_1.py  requirements.txt
rag_chunking_strategies/: README.md  app.py  main.py  pyproject.toml
rag_chunking_strategies/engine/: load_and_split.py
rag_chunking_strategies/rag/: embed_store.py
rag_chunking_strategies/utils/: explain.py
research-analyst/: PRD_Research_Assistant_Hybrid_RAG.md  README.md  main.py  markdown.md  pyproject.toml  test_web_search.py  todo.md
research-analyst/core/: config.py  models.py
research-analyst/services/: database.py  document_processor.py  langchain_llm_service.py  models.py  robust_init.py  search_service.py  tavily_search_service.py  vector_store.py
research-analyst/utils/: logger.py
smart-article-categorizer/: requirements.txt
smart-article-categorizer/src/: README.md  app.py  data_loader.py  embedding_models.py  main.py  train.py
