[project]
name = "plagiarism-detector-semantic-similarity-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "openai>=1.93.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
]
