[project]
name = "rag-chunking-strategies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.6",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "python-dotenv>=1.1.1",
]
