[project]
name = "research-analyst"
version = "0.1.0"
description = "Advanced Hybrid RAG Research Assistant with LangChain and Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # LangChain Core Components (Gemini only)
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-google-genai>=0.0.5",
    # LangChain Text Processing
    "langchain-text-splitters>=0.0.1",
    "langchain-experimental>=0.0.40",
    # Vector Database & Embeddings
    "qdrant-client>=1.6.0",
    "sentence-transformers>=2.2.0",
    # Web Search (Tavily only)
    "tavily-python>=0.3.0",
    # Document Processing
    "pypdf>=3.17.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.0",
    # LangChain Reranking (FlashRank integration)
    "flashrank>=0.2.0",
    # Caching & Performance
    "redis>=5.0.0",
    "asyncio-throttle>=1.0.0",
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    # HTTP & Async
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    # Development
    "streamlit>=1.28.0",
]
